--- a/schmk/schedule_maker.html
+++ b/schmk/schedule_maker.html
@@ -297,7 +297,7 @@
             const timeLabel = formatTimeLabel(hour, min);
 
             html += `<tr>`;
-            html += `<td class="bg-gray-50 font-mono text-sm text-gray-500 sticky left-0 z-10 border-r-2 select-none">${timeLabel}</td>`;
+            html += `<td class="bg-gray-50 font-mono text-sm text-gray-500 sticky left-0 z-10 border-r-2 select-none p-0 align-super">${timeLabel}</td>`;
             
             dates.forEach(d => {
                 const dateKey = formatDateKey(d);
